# OpenCASCADE_Simpler

./: .gitignore  CMakeLists.txt
Common/: CMakeLists.txt  PreProcess.h  helper.cpp  helper.h
Make/: CMakeLists.txt  main.cpp
